# miningpool-observer

./: .dockerignore  .gitignore  Cargo.toml  OFAC_sanctioned_addresses.json  README.md  daemon-config.toml.example  diesel.toml  sanctioned_addresses_XBT.json  shell.nix  web-config.toml.example
.github/: dependabot.yml
.github/workflows/: docker-images.yml  rust.yml
artwork/ogimage_templates/: optimize-svgs-with-scour.sh
contrib/: miningpool-observer-daemon.service  miningpool-observer-web.service
contrib/docker/: Dockerfile.daemon  Dockerfile.web  README.md  entrypoint-daemon.sh  entrypoint-web.sh
daemon/: Cargo.toml  build.rs
daemon/src/: db.rs  main.rs  metrics.rs  model.rs  processing.rs
docs/: development.md  self-hosting.md
migrations/2021-02-21-100000_create_tables/: down.sql  up.sql
migrations/2021-07-06-100000_create_nodeinfo/: down.sql  up.sql
migrations/2022-02-18-100000_who_sanctioned/: down.sql  up.sql
migrations/2023-02-10-100000_create_sanctioned_addresses_tables/: down.sql  up.sql
migrations/2023-04-08-105025_add_template_sigops_to_block_table/: down.sql  up.sql
migrations/2023-04-10-204659_add_remaining_sigops_fields/: down.sql  up.sql
migrations/2025-01-17-100000_make_block_id_a_random_bigserial/: down.sql  up.sql
shared/: Cargo.toml
shared/src/: config.rs  db_pool.rs  lib.rs  model.rs  prometheus_metric_server.rs  sanctioneer.rs  schema.patch  schema.rs  tags.rs
web/: Cargo.toml  build.rs
web/src/: db.rs  error.rs  handler.rs  main.rs  model.rs  ogimage.rs  util.rs
www/: robots.txt
www/static/css/: site.css
www/templates/: base.html  conflicting.html  error.html  faq.html  index.html  missing-sanctioned.html  missing.html  nav.html  templates_and_blocks.html
www/templates/chart/: fee_per_pool.html  feerates.html
www/templates/debug/: fees_by_pool.html  index.html  sanctioned_by_pool.html  template_selection.html  unknown_pool_blocks.html  utxo_set_scans.html
www/templates/debug/rss/: sanctioned.rss
www/templates/macro/: conflicting.html  faq.html  missing.html  opengraph.html  pagination.html  template_and_block.html  transaction.html
www/templates/rss/: missing.xml  sanctioned_missing.xml
www/templates/subpage/: conflicting.html  missing.html  template_and_block.html
