[package]
name = "miningpool-observer-daemon"
version = "0.1.0"
authors = ["0xB10C <0xb10c@gmail.com>"]
edition = "2018"


[dependencies]

miningpool_observer_shared = { path="../shared" }

log = "0.4"
simple_logger = "1.9.0"

bitcoin = "0.29"
bitcoin-pool-identification = "0.1.12"
rawtx-rs = {git = "https://github.com/0xB10C/rawtx-rs", branch = "master", features = [ "counterparty" ]}

hex = "0.4"

diesel_migrations = "2"

# prometheus metrics
prometheus = "0.12.0"
lazy_static = "1.4.0"

[features]
# Treat warnings as a build error.
strict = []

[build-dependencies]
serde = "1"
serde_json = "1"
