[package]
name = "miningpool-observer-daemon"
version = "0.1.0"
authors = ["0xB10C <0xb10c@gmail.com>"]
edition = "2018"


[dependencies]

miningpool_observer_shared = { path="../shared" }

log = "0.4"
simple_logger = "1.9.0"

bitcoin-pool-identification = "0.3.4"
rawtx-rs = { version = "0.1.13", features = [ "counterparty" ]}

hex = "0.4"

diesel_migrations = "2"

# prometheus metrics
prometheus = "0.14.0"
lazy_static = "1.4.0"

minreq = {version = "2.6", features = [ "https" ]}

[features]
# Treat warnings as a build error.
strict = []

[build-dependencies]
serde = "1"
serde_json = "1"
