[package]
name = "miningpool-observer-web"
version = "0.1.0"
authors = ["0xb10c <0xb10c@gmail.com>"]
edition = "2018"

[dependencies]

miningpool_observer_shared = { path="../shared" }

log = "0.4"
simple_logger = "5.0.0"

actix-http = "3"
actix-web = "4"
actix-files = "0.6"

serde = "1"
hex = "0.4"

tera = "1.7"

# svg to png image rendering
resvg = "0.14.1"
usvg = "0.14.1"
tiny-skia = "0.5.1"


[features]
# Treat warnings as a build error.
strict = []

[build-dependencies]
serde = "1"
serde_json = "1"
